@@ -35,7 +35,7 @@ CACERTSPWD="`grep "java_cacerts_pwd" /etc/oph-environment/opintopolku.yml | grep
 if [ -f "${CERT}" ]; then
   echo "Installing local certificates to Java..."
   openssl x509 -outform der -in ${CERT} -out /tmp/ssl.der
-  keytool -import -noprompt -storepass ${CACERTSPWD} -alias opintopolku -keystore /opt/java/openjdk/lib/security/cacerts -file /tmp/ssl
+  keytool -import -noprompt -storepass ${CACERTSPWD} -alias opintopolku -keystore /opt/java/openjdk/jre/lib/security/cacerts -file /tmp/ssl
 fi
 
 export LC_CTYPE=fi_FI.UTF-8
@@ -50,7 +50,7 @@ nohup /root/node_exporter > /root/node_exporter.log  2>&1 &
 
 if [ ${DEBUG_ENABLED} == "true" ]; then
   echo "JDWP debugging enabled..."
-  DEBUG_PARAMS=" -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=1233"
+  DEBUG_PARAMS=" -Xdebug -Xrunjdwp:transport=dt_socket,address=1233,server=y,suspend=n"
 else
   echo "JDWP debugging disabled..."
   DEBUG_PARAMS=""
@@ -85,7 +85,12 @@ JAVA_OPTS="$JAVA_OPTS
   -Dcom.sun.management.jmxremote.local.only=false
   -Djava.rmi.server.hostname=localhost
   -javaagent:/root/jmx_prometheus_javaagent.jar=1134:/root/prometheus.yaml
-  -Xlog:gc*:file=${LOGS}/${NAME}_gc.log:uptime:filecount=10,filesize=10m
+  -Xloggc:${LOGS}/${NAME}_gc.log"
+  -XX:+PrintGCDetails"
+  -XX:+PrintGCTimeStamps"
+  -XX:+UseGCLogFileRotation"
+  -XX:NumberOfGCLogFiles=10"
+  -XX:GCLogFileSize=10m"
   -XX:+HeapDumpOnOutOfMemoryError
   -XX:HeapDumpPath=/root/dumps/tomcat_heap_dump-`date +%Y-%m-%d-%H-%M-%S`.hprof
   -XX:ErrorFile=/root/logs/tomcat_hs_err.log
